fix bug 992653 - Prevent adv menu from going offscreen on mobile

--- a/media/redesign/stylus/wiki.styl
+++ b/media/redesign/stylus/wiki.styl
@@ -1134,6 +1134,10 @@ div.revision-info li {
     }
   }
 
+  .page-buttons > li.page-buttons-edit {
+    display: none;
+  }
+
   /* display the attachments table as inline */
   #page-attachments {
 
